<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <include layout="@layout/common_toolbar"

             android:id="@+id/guide_common_toolbar"/>


    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="49dp"
                  android:orientation="horizontal"
                  android:background="#ffffff"
                  android:id="@+id/ll_guide_first"
                  android:layout_below="@id/guide_common_toolbar">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/freshman_guide_hostel"
                  android:layout_marginStart="20dp"
                  android:gravity="center"
                  android:layout_gravity="center_vertical"
                  android:textSize="17sp"
                  android:id="@+id/tv_guide_hostel"
                  android:textColor="#515151"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/tv_guide_dining_room"
                  android:layout_marginStart="66dp"
                  android:text="@string/freshman_guide_dining_room"
                  android:textSize="17sp"
                  android:layout_gravity="center_vertical"
                  android:gravity="center"
                  android:textColor="#515151"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/tv_guide_delivery"
                  android:layout_marginStart="66dp"
                  android:text="@string/freshman_guide_delivery"
                  android:textSize="17sp"
                  android:layout_gravity="center_vertical"
                  android:gravity="center"
                  android:textColor="#515151"/>

        <TextView android:layout_width="70dp"
                  android:layout_height="wrap_content"
                  android:id="@+id/tv_guide_data"
                  android:layout_marginStart="66dp"
                  android:text="@string/freshman_guide_data"
                  android:textSize="17sp"
                  android:layout_gravity="center_vertical"
                  android:gravity="center"
                  android:layout_marginEnd="20dp"
                  android:textColor="#515151"/>
    </LinearLayout>


    <com.mredrock.cyxbs.freshman.weight.CustomViewPager android:layout_width="match_parent"
                                         android:layout_height="match_parent"
                                         android:id="@+id/vp_guide"
                                         android:layout_below="@id/ll_guide_first"/>


</RelativeLayout>