<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <include layout="@layout/common_toolbar"
            android:id="@+id/app_bar_layout"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:orientation="horizontal"
            android:id="@+id/ll_communicata_text"
            android:layout_below="@id/app_bar_layout">

        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:text="@string/freshman_cource"
                  android:textSize="17sp"
                  android:gravity="center"
                  android:layout_gravity="center_vertical"
                  android:textColor="#333333"
                  android:id="@+id/tv_academy"/>

        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:text="@string/freshman_fellow"
                  android:textSize="17sp"
                  android:gravity="center"
                  android:layout_gravity="center_vertical"
                  android:textColor="#333333"
                  android:id="@+id/tv_fellow"/>

        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:text="@string/freshman_activity"
                  android:textSize="17sp"
                  android:layout_gravity="center_vertical"
                  android:gravity="center"
                  android:textColor="#333333"
                  android:id="@+id/tv_activities"/>

    </LinearLayout>

    <View android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="#b3c4ff"/>



    <androidx.viewpager.widget.ViewPager android:layout_width="match_parent"
                                         android:layout_height="match_parent"
                                         android:layout_below="@id/ll_communicata_text"
                                         android:id="@+id/vp_communicate">

    </androidx.viewpager.widget.ViewPager>
</RelativeLayout>


